# obsidian-parser

./: .gitignore  ]  pyproject.toml  settings.json
obsidian_parser/: core.py  helpers.py  main.py  parser_extensions.py  settings.py  watch.py
output/first-newsletter/: index.md
output/how-i-am-using-obsidian-for-my-blog/: index.md
