[tool.poetry]
name = "obsidian-parser"
version = "0.1.0"
description = ""
authors = ["emgardner <gardner.ethan10@gmail.com>"]
readme = "README.md"
packages = [{include = "obsidian_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
marko = "^2.0.2"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
